--- a/shared/Modals/CookiesModal/CookiesModal.module.scss
+++ b/shared/Modals/CookiesModal/CookiesModal.module.scss
@@ -138,7 +138,7 @@
                 .ctas {
                     margin-top: 2.4rem;
                     .accept_btn, .decline_btn {
-                        height: 4.8rem;
+                        height: 4.2rem;
                     }
                 }
             }
